--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ description: Hello Flutter
 dependencies:
   flutter:
     sdk: flutter
-
+  redux: "^3.0.0"
+  flutter_redux: "^0.5.0"
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
